--- a/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
+++ b/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
@@ -69,7 +69,19 @@
         </tr>
         <tr>
           <th>
-            <input type="text" class="form-control w-75" (keyup)="filter($event);">
+            <input type="text" class="form-control w-75" (keyup.enter)="filter($event,0, 5, 'name');" (input)="inputName($event)">
+          </th>
+          <th>
+            <input type="text" class="form-control w-75" (keyup.enter)="filter($event,0, 5, 'modeOfIdentity');" (input)="inputModeOfIdentity($event)">
+          </th>
+          <th>
+            <input type="text" class="form-control w-75" (keyup.enter)="filter($event,0, 5, 'agentIdNo');" (input)="inputIdNumber($event)">
+          </th>
+          <th>
+            <input type="text" class="form-control w-75" (keyup.enter)="filter($event,0, 5, 'primaryType');" (input)="inputPrimaryType($event)">
+          </th>
+          <th>
+            <input type="text" class="form-control w-75" (keyup.enter)="filter($event,0, 5, 'accountType');" (input)="inputAccountType($event)">
           </th>
         </tr>
       </ng-template>
