VQ-1092 | API to fetch policy summary

--- a/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.html
@@ -925,7 +925,7 @@
                                     <!-- Content A (left side) -->
                                     <div>
                                         <div>
-                                            <label class="label" for="intermediary">Intermediary<span></span></label>
+                                            <label class="label" for="intermediary">Client Name<span></span></label>
                                         </div>
                                         <select class="form-select" id="intermediary"
                                                 formControlName="intermediary">
