--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -40,7 +40,7 @@
             <div class="col-md-6">
               <div class="m-4">
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Intermediary: </span>
+                  <span class="font-grey__font-eight__700">Client Name: </span>
                   <span class="fw-light">{{ "Ayomi cherop" }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
