--- a/src/app/features/setups/components/need-analysis/components/new-bussiness/new-bussiness.component.html
+++ b/src/app/features/setups/components/need-analysis/components/new-bussiness/new-bussiness.component.html
@@ -2,7 +2,7 @@
   <div class="full-border">
     <div class="d-flex justify-content-between">
       <div class="fw-bold fs-6 pb-3" style="color: var(--primary-color)">
-        Need Analysis Setup - New Bussiness
+        Need Analysis Setup - New Business
       </div>
     </div>
 
