--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -73,7 +73,7 @@
                         <td style="width: 50%; align-items: right;">{{ quoteSummary?.date }}</td>
                     </tr>
                     <tr>
-                        <td style="width: 50%; align-items: left; color: grey;">Intermediary: </td>
+                        <td style="width: 50%; align-items: left; color: grey;">Client Name: </td>
                         <td style="width: 50%; align-items: right;">{{ quoteSummary?.agent_code }}</td>
                     </tr>
                 </table>
