--- a/src/assets/css/lms-base.scss
+++ b/src/assets/css/lms-base.scss
@@ -19,5 +19,8 @@
   border: var(--bs-border-width) solid var(--bs-border-color) !important;
     border-radius: var(--bs-border-radius) !important;
 }
+& tr {
+  padding: 0.4rem 0.1rem;
+}
     
 }
