VQ-1215: Error mgt on auth and reset password journey

--- a/src/app/features/auth/change-password/change-password.component.html
+++ b/src/app/features/auth/change-password/change-password.component.html
@@ -41,7 +41,12 @@
         </div>
       </div>
 
-      <button id="saveButton" class="btn btn-primary btn-full-width" size="large">Save</button>
+      <button id="saveButton" class="btn btn-primary btn-full-width" size="large" [disabled]="isLoading || !form.valid">
+        <span *ngIf="!isLoading; else loading">Save</span>
+        <ng-template #loading>
+          <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
+        </ng-template>
+      </button>
     </form>
   </div>
   <app-copyright-footer></app-copyright-footer>
