--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -8,10 +8,6 @@
 
     <h4 class="forgot-password-text mb-3">Forgot Password</h4>
     <p class="text-muted mb-3">Enter your email address and registered phone number to verify your account.</p>
-
-<!--    <div class="alert alert-success" role="alert" *ngIf="saveSuccess">-->
-<!--      Please check your email for OTP to reset your password-->
-<!--    </div>-->
     <form [formGroup]="form" (ngSubmit)="onSubmit()" aria-labelledby="title">
       <div class="form-group mb-3">
         <label class="form-label" for="input-email">Your Email</label>
@@ -28,7 +24,12 @@
           <div *ngIf="f['phoneNumber'].errors['required']">Phone Number is required</div>
         </div>
       </div>
-      <button id="subBtn"  class="btn btn-primary btn-full-width" [disabled]="!form.valid">Submit</button>
+      <button id="subBtn"  class="btn btn-primary btn-full-width" [disabled]="isLoading || !form.valid">
+        <span *ngIf="!isLoading; else loading">Submit</span>
+        <ng-template #loading>
+          <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
+        </ng-template>
+      </button>
     </form>
   </div>
 
